2004-10-16  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* ltmain.sh: backport -framework support from libtool 2.0
	* README.darwin: sane-find-scanner now works for SCSI, so removed
	  statement that said it didn't. More libusb info, and link to libusb
	  patch

2004-10-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* frontend/saned.c: Fixed NULL string crash.
	* README.linux: Added some more details about hotplug and Gentoo
	  problems.
	* NEWS: Updated for 1.0.15.

2004-10-17  Ullrich Sigwanz <usigwanz@freesurf.ch>

        * backend/niash_core.c: rewrote buffer portioning
        * backend/niash_core.c (2): updated debug info 
        * backend/niash.c: Enabling support of full DIN A4 size

2004-10-16  Oliver Rauch <Oliver.Rauch@Rauch-DOmain.DE>

	* backend/umax.c: added default options for Linotype OPAL2

2004-10-15  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added various scanners.
	* po/sane-backends.da.po: Updated Danish translation (from Mogens
	  Jaeger <mogensjaeger@get2net.dk>). 
	
2004-10-14  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* include/sane/sanei_wire.h sanei/sanei_wire.c: Limit the total
	  amount of memory used for arrays and pointers while decoding the
	  wire to 1 MB (bug #300158). Run "make clean" before "make"!

2004-10-14  Ullrich Sigwanz <usigwanz@freesurf.ch>

        * backend/niash.c: removing a non-ANSI conform comma.
          adapting the gammma conversion.

2004-10-14  Gerhard Jaeger <gerhard@gjaeger.de>

	* sanei/sanei_thread.c: Added missing pthread_detach() so the
	  thread resources could be reused again.

2004-10-13  Ullrich Sigwanz <usigwanz@freesurf.ch>

        * backend/niash.c: Proper resource handling in sane_cancel.

2004-10-12  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek.c: Fixed warning condition.
	* backend/plustek-usbhw.c: Cleanup.

2004-10-12 Giuseppe Sacco <eppesuig@debian.org>

	* Updated italian translation.